fixed weird jumping of search text input when typing

--- a/NonMaps/src/war/style.css
+++ b/NonMaps/src/war/style.css
@@ -1337,3 +1337,7 @@ input[type="range"]::-moz-range-track {
 .padd-left {
 	padding-left: 0.5em;
 }
+
+.dialogcontainer .w70p {
+	margin: initial;
+}
